# Derk-s-Async-Httpd

./: CMakeLists.txt  CMakePresets.json  chunked_demo.sh  curl_demo.sh  post_demo.sh  utility.sh
curl_demos/: chunked_demo.sh  head_demo.sh  mod_time_demo.sh
docs/: README.md
include/myapp/: contents.hpp  msg_task.hpp  response_helpers.hpp  routes.hpp
include/myhttp/: enums.hpp  intake.hpp  msgs.hpp  outtake.hpp
include/mynet/: enums.hpp  handles.hpp  io_funcs.hpp  make_srvsock.hpp
include/myuri/: parse.hpp  uri.hpp
src/: CMakeLists.txt  main.cpp
src/myapp/: contents.cpp  response_helpers.cpp  routes.cpp
src/myhttp/: enums.cpp  intake.cpp  outtake.cpp
src/mynet/: handles.cpp  io_funcs.cpp  make_srvsock.cpp
src/myuri/: parse.cpp  uri.cpp
www/: index.html  index.js  lorem.txt
